# py-rudolph

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.sh
src/: __main__.py  cgcodecs.py  clipping.py  graphics.py  graphics3d.py  linalg.py  main.py  scene.py  transformations.py  windows.py
ui/: mainwindow.ui  newobjectdialog.ui
